MORE VALIDATION ADDED

--- a/includes/navbar.html
+++ b/includes/navbar.html
@@ -7,8 +7,9 @@
     <link rel="stylesheet" href="/bootstrap/css/bootstrap.css">
     <title>Document</title>
     <style>
-      .li, a{
-        color: white;
+      .navbar li a{
+        color: rgb(10, 10, 10);
+        font-size: larger;
       }
     </style>
 </head>
@@ -37,7 +38,7 @@
                 <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
                   <li><a class="dropdown-item" href="#">Customer</a></li>
                   <li><a class="dropdown-item" href="#">Farmer</a></li>
-                  <li><a class="dropdown-item" href="#">Agric</a></li>
+                  <li><a class="dropdown-item" href="#">Agricultural Officer</a></li>
                 </ul>
               </li>
             </ul>
@@ -45,5 +46,6 @@
         </div>
       </nav>  
       <script src="/bootstrap/js/bootstrap.bundle.js"></script>
+      <script src="/includes/custom.js"></script>
 </body>
 </html>
