--- a/includes/footer.html
+++ b/includes/footer.html
@@ -1,12 +1,34 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <style>
+        footer {
+            padding: 0px;
+            text-align: center;
+            color: rgb(12, 12, 12);
+            font-size: larger;
+        }
+    </style>
     <title>Document</title>
 </head>
+
 <body>
-    
+
+
+
+
+
+
+
+
+    <footer class="footer bg-success">
+        About us <br>
+        Contact support
+    </footer>
 </body>
+
 </html>
