--- a/includes/navbar.html
+++ b/includes/navbar.html
@@ -5,11 +5,16 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="/bootstrap/css/bootstrap.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.3/font/bootstrap-icons.css">
     <title>Document</title>
     <style>
       .navbar li a{
         color: rgb(10, 10, 10);
         font-size: larger;
+      }
+      .bi-cart4{
+        font-size: 30px;
+        padding-left: 900px;
       }
     </style>
 </head>
@@ -42,6 +47,9 @@
                 </ul>
               </li>
             </ul>
+           
+            
+           <a href="/products/cart.html"><i class="bi bi-cart4"></i></a>
           </div>
         </div>
       </nav>  
