CAPTIONS TO HOME PAGE

--- a/includes/footer.html
+++ b/includes/footer.html
@@ -12,6 +12,9 @@
             color: rgb(12, 12, 12);
             font-size: larger;
         }
+        ul{
+            color: rgb(12, 12, 12);
+        }
     </style>
     <title>Document</title>
 </head>
@@ -26,8 +29,9 @@
 
 
     <footer class="footer bg-success">
-        About us <br>
+        <ul><a href="/footer/aboutus.html">About us</a> <br>
         Contact support
+        </ul>
     </footer>
 </body>
 
