changes to cart body

--- a/includes/footer.html
+++ b/includes/footer.html
@@ -6,33 +6,29 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <style>
-        footer {
+        .footer {
             padding: 0px;
             text-align: center;
             color: rgb(12, 12, 12);
             font-size: larger;
         }
-        ul{
+
+        ul {
             color: rgb(12, 12, 12);
         }
+      
     </style>
     <title>Document</title>
 </head>
 
 <body>
-
-
-
-
-
-
-
-
-    <footer class="footer bg-success">
-        <ul><a href="/footer/aboutus.html">About us</a> <br>
-        Contact support
-        </ul>
-    </footer>
+    <div class="footer">
+        <footer class="footer bg-success">
+            <ul><a href="/footer/aboutus.html">About us</a> <br>
+                Contact support
+            </ul>
+        </footer>
+    </div>
 </body>
 
 </html>
