--- a/includes/navbar.html
+++ b/includes/navbar.html
@@ -13,7 +13,8 @@
       color: rgb(10, 10, 10);
       font-size: larger;
     }
-    .cart{
+
+    .cart {
       font-size: 30px;
       padding-left: 900px;
 
@@ -35,7 +36,7 @@
             <a class="nav-link active" aria-current="page" href="/home.html">Home</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="/auth/login.html">Login</a>
+            <a class="nav-link" href="#">Features</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="/products/product.html">Products</a>
@@ -43,15 +44,20 @@
           <li class="nav-item dropdown">
             <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button"
               data-bs-toggle="dropdown" aria-expanded="false">
-              Profile
+              Account
             </a>
             <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-              <li><a class="dropdown-item" href="#">Customer</a></li>
-              <li><a class="dropdown-item" href="#">Farmer</a></li>
-              <li><a class="dropdown-item" href="#">Agricultural Officer</a></li>
+              <li><a class="dropdown-item" href="/auth/signup.html">Signup</a></li>
+              <li><a class="dropdown-item" href="/auth/login.html">Login</a></li>
             </ul>
           </li>
         </ul>
+        <div class="row-justify-content-right">
+          <form class="d-flex" role="search">
+            <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
+            <button class="btn btn-outline-dark" type="submit">Search</button>
+          </form>
+        </div>
         <div class="cart">
           <a href="/products/cart.html"><i class="bi bi-cart4"></i></a>
         </div>
