CHANGES TO some  FORMS AND VALIDATIONS

--- a/includes/navbar.html
+++ b/includes/navbar.html
@@ -16,9 +16,18 @@
 
     .cart {
       font-size: 30px;
-      padding-left: 900px;
-
+      margin-left: auto;
     }
+
+    .navbar-collapse {
+      display: flex;
+      justify-content: center;
+    }
+
+    .cart a {
+  color: red;
+}
+
   </style>
 </head>
 
@@ -52,8 +61,8 @@
             </ul>
           </li>
         </ul>
-        <div class="row-justify-content-right">
-          <form class="d-flex" role="search">
+        <div>
+          <form class="d-flex " role="search">
             <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
             <button class="btn btn-outline-dark" type="submit">Search</button>
           </form>
